@@ -94,6 +94,7 @@ production.
 * (bug 30907) Special:Unusedcategories should sort ascendingly.
 * (bug 18424) Special:Prefixindex and Special:Allpages paging links are
   really small, and somewhat inconsistent with each other.
+* Per page edit-notices now work in namespaces without subpages enabled.
 
 === API changes in 1.19 ===
 * (bug 19838) siprop=interwikimap can now use the interwiki cache.
